<resources>
    <string name="app_name">Tajika</string>

    <string name="place_api_key">AIzaSyBSidc4z430X8vnpwPBm417ISf3XODdTyE</string>
    <string name="api_key">AIzaSyBSidc4z430X8vnpwPBm417ISf3XODdTyE</string>
    <string name="map_api_key">&amp;key=AIzaSyBSidc4z430X8vnpwPBm417ISf3XODdTyE</string>

    <string name="splash_info_user_provider">To get services select User, to provide service select service provider individual/business</string>

    <string name="reset_password_text">We will send you a link on your registered email or one-time-password (OTP) on your mobile to reset your password.</string>

    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s. When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting. Remaining essentially unchanged. It was popularised in the 1960s simply dummy text printing standard dummy text.

Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="dummy_address">Block B, New Ashok Nagar, New Dehli</string>
    <string name="how_can_i_change_my_password">How can i change my password?</string>
    <string name="for_quick_resolutions_check_faq_s"> <u>For quick resolutions check FAQ\'s</u></string>
    <string name="copy_code"><u>Copy code</u></string>
    <string name="redeem_now"><u>Redeem now</u></string>
    <string name="convert_coins_to_discount_vouchers">Convert your coins to exclusive discount vouchers</string>
    <string name="successfully_redeemed_the_coins">You have successfully redeemed the coins.</string>
    <string name="voucher_added_to_account">Your voucher is added to your account you can use it in your next booking.</string>
    <string name="check_points_history">Check points history</string>
    <string name="cancellation_details"><u>Cancellation details</u></string>
    <string name="dummy_services">1. Catering \n2. Cooking\n3. Dine-in\n 4. Italian</string>
    <string name="dummy_skills">1. Chopped cooking \n2. Plater\n3. Dine in specialist</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello,</string>
    <string name="nav_header_subtitle">Peter Lawerance</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_search_keyword">Search all services.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_provider_search">Map</string>
    <string name="your_details"><u>Your Details</u></string>
    <string name="business_details"><u>Business details</u></string>
    <string name="other_details"><u>Other details</u></string>
    <string name="subscription"><u>Subscription</u></string>
    <string name="description"><u>Description</u></string>
    <string name="your_business_analytics"><u>Your business analytics</u></string>
    <string name="clear_all"><b>Clear All</b></string>
    <string name="good_morning_peter_what_can_we_help_you_with">Good Morning, What can we help you with?</string>

    <string name="title_onboarding_1">Find Service Provider Near You</string>
    <string name="description_onboarding_1">Have a problem you can\'t solve? Are you looking for a service provider?</string>

    <string name="title_onboarding_2">Join As A Service Provider With Us</string>
    <string name="description_onboarding_2">Are you an expert in your field and looking to provide services or goods to customers near you?</string>

    <string name="title_onboarding_3">Welcome To Tajika App</string>
    <string name="description_onboarding_3">Tajika connects you to the best service providers @ the best price.</string>

    <string name="start_text_advice">Tajika connects you to the best service providers @ the best price.</string>

    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="finish">Let\'s get started</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="enter_few_more_information">"Without hustle, talent will only carry you so far.” \n– Gary Vaynerchu</string>
    <string name="select_business_category">Select Business Category</string>
    <string name="some_thing_went_wrong">Something went wrong</string>
    <string name="todo">TODO</string>
    <string name="how_it_works"><b>1.</b> Click one any of below options (Message, Whatsapp, Facebook, more)\n\n<b>2.</b> Select contact\n\n<b>3.</b> Earn discount/points as soon as your referral completes the sign up processes</string>
    <string name="recommended_by_tajika"><u>Recommended by Tajika</u></string>
    <string name="payment_valid_for_one_time_and_valid_for_3days">Note: This payment will be valid only for one time as shown in subscription plan validity.</string>
    <string name="pay_one_time_to_get_access_of_provider">Pay one time charge to get the access of provider.</string>
    <string name="pay_one_time_charge">Pay one time charge</string>
    <string name="close_dialog">close dialog</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_goods">AddNewGoodsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_your_new_service"><u>Add your new service</u></string>
    <string name="add_your_new_good"><u>Add your new good</u></string>
    <string name="add_goods_instead"><u>Add goods instead</u></string>
    <string name="request_summery"><u>Request Summery</u></string>
    <string name="service_summery"><u>Service details</u></string>
    <string name="cancellation_charge"><b>Cancellation Charge: </b></string>
    <string name="cancellation_reason"><b>Reason: </b></string>
    <string name="cancellation_comment"><b>Comment: </b></string>
    <string name="cancelled_on"><b>Cancelled On: </b></string>
    <string name="resizable_text_read_more">Read More</string>
    <string name="resizable_text_read_less">Read Less</string>

</resources>