<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_100"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pay_one_time_charge"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                style="@style/topDesign_textView_bold" />

            <ImageView
                android:id="@+id/iv_dialogCancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/circle_cancel"
                android:contentDescription="@string/close_dialog"
                app:tint="@color/golden" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="30dp"
            android:src="@drawable/badge_check_2x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_one_time_to_get_access_of_provider"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            style="@style/topDesign_textView_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/payment_valid_for_one_time_and_valid_for_3days"
            android:textColor="@color/dark_blue"
            style="@style/topDesign_textView" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_payNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
            android:text="Pay Now"
            android:letterSpacing="0.05"
            android:textAllCaps="false"
            android:textColor="@color/md_blue_grey_800"
            android:textStyle="bold"
            app:cornerRadius="30dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
