<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SPindividual.SpiServiceRequestDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/appBar_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_backPress"
            style="@style/appBar_imageView" />

        <TextView
            style="@style/appBar_textView"
            android:text="Service request details" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/layout_input_outline"
                android:backgroundTint="@color/grey_100"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/topDesign_textView_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Service Request"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Request Id:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_jobId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="UGIGIGI4256"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Job date:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_jobDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="05 Jan 2020"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Job time:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_jobTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="04:00 PM"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Job type:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_jobType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="Catering"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_input_outline"
                android:backgroundTint="@color/grey_100"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/topDesign_textView_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Service address and description"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_serviceAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/dummy_address"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_serviceDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:justificationMode="inter_word"
                        android:maxLines="3"
                        android:text="@string/dummy_text"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold" />
<!--
                    <TextView
                        android:id="@+id/descReadMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="Read More"
                        android:textColor="@color/golden"
                        android:textSize="16sp"
                        android:textStyle="bold" />-->
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/layout_input_outline"
                android:backgroundTint="@color/grey_100"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    style="@style/topDesign_textView_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Amount to be received"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_amtWillingToPay"
                    style="@style/topDesign_textView_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ksh 2,000"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/layout_input_outline"
                android:backgroundTint="@color/grey_100"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/topDesign_textView_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Customer info"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Customer name:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_custName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="Piyush Goyal"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Customer number:"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_custNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="+91121234567"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_acceptService"
            style="@style/topDesign_textView_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/homepage_left"
            android:gravity="center"
            android:padding="15dp"
            android:text="Accept"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_declineService"
            style="@style/topDesign_textView_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_right"
            android:gravity="center"
            android:padding="15dp"
            android:text="Decline"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>